Initial "blog" post, unclear if we'll really use this feature much, but config.d style post directories is kind of neat.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Cobbler</a>
-    <a class="extra" href="/">home</a>
+    <a href="/">Cobbler -- the Linux install and update server</a></A>
   </div>
   
   {{ content }}
@@ -35,8 +34,8 @@ var WRInitTime=(new Date()).getTime();
     <div class="contact">
       <p>
         <br />
-        <a href="https://fedorahosted.org/mailman/listinfo/cobbler">Cobbler mailing list</a><br />
-        <a href="https://fedorahosted.org/mailman/listinfo/cobbler-devel">Cobbler development mailing list</a><br />
+        <a href="https://fedorahosted.org/mailman/listinfo/cobbler">Cobbler mailing list</a> | 
+        <a href="https://fedorahosted.org/mailman/listinfo/cobbler-devel">development list</a><br />
       </p>
     </div>
   </div>
