--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,10 @@ var WRInitTime=(new Date()).getTime();
     <div class="contact">
       <p>
         <br />
-        <a href="https://fedorahosted.org/mailman/listinfo/cobbler">Cobbler mailing list</a> | 
-        <a href="https://fedorahosted.org/mailman/listinfo/cobbler-devel">development list</a><br />
+        <a href="https://cobbler.github.com">Home</A> | 
+        <a href="https://github.com/cobbler/cobbler">Project</A> | 
+        <a href="https://fedorahosted.org/mailman/listinfo/cobbler">User list</a> | 
+        <a href="https://fedorahosted.org/mailman/listinfo/cobbler-devel">Development list</a><br />
       </p>
     </div>
   </div>
