Actually, why not just use the github Wiki?   Make this page more of an intro stub.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,10 @@ var WRInitTime=(new Date()).getTime();
       <p>
         <br />
         <a href="https://cobbler.github.com">Home</A> | 
-        <a href="https://github.com/cobbler/cobbler">Project</A> | 
+        <a href="https://github.com/cobbler/cobbler">Project & Bug Tracker</A> | 
         <a href="https://fedorahosted.org/mailman/listinfo/cobbler">User list</a> | 
         <a href="https://fedorahosted.org/mailman/listinfo/cobbler-devel">Development list</a><br />
+        <a href="https://github.com/cobbler/cobbler/wiki">Documentation</A>
       </p>
     </div>
   </div>
