--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
    <meta name="author" content="Cobbler development team" />
 
    <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+   <!-- <link rel="stylesheet" href="/css/syntax.css" type="text/css" /> -->
 
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
@@ -14,6 +14,9 @@
    <!-- Typekit -->
    <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+   <!-- Icon -->
+   <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
 <body>
 
@@ -22,7 +25,7 @@
 var WRInitTime=(new Date()).getTime();
 </script>
 <!-- ClickTale end of Top part -->
-
+{% include navigation.md %}
 <div class="site">
   <div class="title">
     <a href="/">Cobbler -- the Linux install and update server</a></A>
@@ -35,8 +38,6 @@ var WRInitTime=(new Date()).getTime();
     </div>
   </div>
 </div>
-
-<a href="http://github.com/cobbler/cobbler"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
 
 <!-- Google Analytics -->
 <script type="text/javascript">
