--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
    <!-- <link rel="stylesheet" href="/css/syntax.css" type="text/css" /> -->
 
    <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+   <!-- <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" /> -->
 
    <!-- Typekit -->
    <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
@@ -27,15 +27,9 @@ var WRInitTime=(new Date()).getTime();
 <!-- ClickTale end of Top part -->
 {% include navigation.md %}
 <div class="site">
-  <div class="title">
-    <a href="/">Cobbler -- the Linux install and update server</a></A>
-  </div>
-  
   {{ content }}
-  
   <div class="footer">
-    <div class="contact">
-    </div>
+    <div class="contact"></div>
   </div>
 </div>
 
