--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="/css/style.css" type="text/css" />
 
    <!-- Fonts -->
-   <link href='http://fonts.googleapis.com/css?family=Ovo' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Signika|Ovo' rel='stylesheet' type='text/css'>
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -26,14 +26,14 @@ var WRInitTime=(new Date()).getTime();
 <!-- ClickTale end of Top part -->
 
 <div id="wrapper">
-  <div id="header">
-  </div>
+  <div id="header"><img id="logo" src="/images/logo-cobbler.png" alt="logo" /></div>
   <div id="container">
     <div id="leftcol">
     {% include navigation.md %}
     </div>
     <div id="content">
     {{ content }}
+    <div id="push"></div>
     </div>
     <div id="rightcol">
     </div>
