--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,23 @@
 }
 
 html,body {
- margin: 0;
- padding: 0;
  height: 100%;
  color: #0B144B;
  background-color: #f4f2e7;
- font-size:0.90em;
- font-family: 'Ovo', serif;
+ font-size:0.9em;
+ /*font-family: 'Ovo', serif;*/
+ /*font-family: Garamond, serif;*/
+ /*font-family: Signika, sans-serif;*/
+ font-family:Calibri,"Segoe UI",
+             Candara,
+             "DejaVu Sans",
+             "Bitstream Vera Sans",
+             "Trebuchet MS",
+             Verdana,
+             sans-serif;
 }
 
 body {
- margin:0;
- padding:0;
  font-size:.9em;
  width: 98%;
 }
@@ -37,14 +42,15 @@ h1 a, h2 a, h3 a, h4 a {
 }
 
 #wrapper {
-  height:auto !important;
-  margin:0 auto -100px; /*this value is the footer height)*/
   min-height:100%;
+  height:auto !important;
+  height:100%;
+  margin:0 auto -50px; /*this value is the footer height)*/
   width: 100%;
 }
 #header {
   width:100%;
-  height:50px;
+  height:90px;
   padding:0;
   margin:0;
 }
@@ -68,14 +74,84 @@ h1 a, h2 a, h3 a, h4 a {
   margin-left: 200px;
   margin-right: 200px;
 }
-#footer {
+#footer, #push {
   width:100%;
-  height:90px;
-  padding: 10px;
-  text-align: center;
+  height:30px;
+  padding-top:20px;
+  text-align:center;
 }
 
-#content p {
-  margin-top: 1em;
+#mainmenu {
+  text-align:left;
+  color: #2B346B;
+  /*font-family: Signika, sans-serif;*/
+  /*font-family: sans-serif;*/
+ font-family:Calibri,"Segoe UI",
+             Candara,
+             "DejaVu Sans",
+             "Bitstream Vera Sans",
+             "Trebuchet MS",
+             Verdana,
+             sans-serif;
+}
+#mainmenu .heading {
+ padding-left: 5px;
+ margin-bottom: 3px;
+ font-weight: bold;
+ font-size: 0.9em;
+ width: 90%;
+ border-bottom: 1px solid #2B346B;
+}
+.menu {
+}
+.menu ul {
+ margin: 0px;
+ margin-bottom: 1em;
+ padding: 0px;
+ padding-left: 5px;
+ list-style-type: none;
+ width: 90%;
+}
+.menu li {
+ width: 100%;
+}
+.menu li:not(.last) {
+ border-bottom: 1px solid #c9c9c9;
+}
+.menu a {
+ display: block;
+ padding-top:2px;
+ padding-left:5px;
+ padding-right:5px;
+ padding-bottom:2px;
+ font-size:0.9em;
+ font-weight:normal;
+ width:100%
+ color: #2B346B;
+}
+.menu a:link, .menu a:visited {
+ font-weight:normal;
+ text-decoration: none;
+ color: #2B346B;
+}
+.menu a:hover {
+ color: #fff;
+ background-color: #444;
+}
+.menu a.current {
+ font-weight:bolder;
+}
+
+#content h2 {
+  border-bottom: 1px solid #2B346B;
+}
+#content h1, #content h2, #content h3 {
+  margin-bottom: 0.5em;
+}
+#content p, #content ul {
   margin-bottom: 1em;
+}
+
+#header #logo {
+  width: 190px;
 }
