--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,61 +1,18 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }}</title>
-   <meta name="author" content="Cobbler development team" />
-
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/style.css" type="text/css" />
-
-   <!-- Fonts -->
-   <link href='http://fonts.googleapis.com/css?family=Signika|Ovo' rel='stylesheet' type='text/css'>
-
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-
-   <!-- Icon -->
-   <link rel="icon" type="image/png" href="/images/favicon.png" />
-</head>
-<body>
-
-<!-- ClickTale Top part -->
-<script type="text/javascript">
-var WRInitTime=(new Date()).getTime();
-</script>
-<!-- ClickTale end of Top part -->
+{% include header.md %}
 
 <div id="wrapper">
   <div id="header"><img id="logo" src="/images/logo-cobbler.png" alt="logo" /></div>
   <div id="container">
     <div id="leftcol">
-    {% include navigation.md %}
-    </div>
-    <div id="content">
-    {{ content }}
-    <div id="push"></div>
+{% include navigation.md %}
     </div>
     <div id="rightcol">
+    </div>
+    <div id="content">
+{{ content }}
+    <div id="push"></div>
     </div>
   </div>
 </div>
 
-<div id="footer">
-  <div class="contact">&copy; 2012</div>
-</div>
-
-<!-- Google Analytics -->
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-27319020-1']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-<!-- Google Analytics end -->
-
-</body>
-</html>
+{% include footer.md %}
