--- a/css/style.css
+++ b/css/style.css
@@ -66,13 +66,13 @@ h1 a, h2 a, h3 a, h4 a {
 }
 #rightcol {
   float: right;
-  width: 190px;
+  width: 240px;
   padding-left: 5px;
   padding-right: 5px;
 }
 #content {
   margin-left: 200px;
-  margin-right: 200px;
+  margin-right: 250px;
 }
 #footer, #push {
   width:100%;
@@ -148,7 +148,7 @@ h1 a, h2 a, h3 a, h4 a {
 #content h1, #content h2, #content h3 {
   margin-bottom: 0.5em;
 }
-#content p, #content ul, #content .toc, #content .highlight{
+#content p, #content ul, #content .highlight{
   margin-bottom: 1em;
 }
 #content ul.dirtree {
@@ -157,4 +157,8 @@ h1 a, h2 a, h3 a, h4 a {
 
 #header #logo {
   width: 190px;
+}
+
+#rightcol .toc {
+  width: 240px;
 }
