--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,4 @@
-.highlight  { background: #ffffff; }
+.highlight  { background: #ffffff; overflow: auto; padding: 5px; border: 1px solid #aaa; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
