--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,19 @@
 
 html,body {
  height: 100%;
- color: #0B144B;
- background-color: #f4f2e7;
- font-size:0.9em;
- /*font-family: 'Ovo', serif;*/
- /*font-family: Garamond, serif;*/
- /*font-family: Signika, sans-serif;*/
- font-family:Calibri,"Segoe UI",
-             Candara,
-             "DejaVu Sans",
-             "Bitstream Vera Sans",
-             "Trebuchet MS",
-             Verdana,
-             sans-serif;
+ color: #0b044b;
+ background-color: white;
+ font-size:1.0em;
+ font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 body {
  font-size:.9em;
- width: 98%;
+ width: 100%;
 }
 
 a {
- color: #0B144B;
+ color: #0b044b;
 }
 
 a:hover {
@@ -45,18 +36,21 @@ h1 a, h2 a, h3 a, h4 a {
   min-height:100%;
   height:auto !important;
   height:100%;
-  margin:0 auto -50px; /*this value is the footer height)*/
+  margin:0 auto -35px; /*this value is the footer height)*/
   width: 100%;
 }
 #header {
-  width:100%;
-  height:90px;
-  padding:0;
+  height:70px;
+  padding:5px;
+  padding-top:15px;
   margin:0;
+  background-color: #444237;
+  border-bottom: 4px solid #d4d2c7;
 }
 #container {
   clear: both;
   min-width: 600px;
+  padding-top: 10px;
 }
 #leftcol {
   float: left;
@@ -73,26 +67,24 @@ h1 a, h2 a, h3 a, h4 a {
 #content {
   margin-left: 200px;
   margin-right: 250px;
+  padding-bottom: 10px;
 }
 #footer, #push {
   width:100%;
-  height:30px;
-  padding-top:20px;
+  height:20px;
+  padding-top:10px;
   text-align:center;
+}
+#footer {
+  background-color: #444237;
+  border-top: 5px solid #d4d2c7;
+  color: white;
+  font-weight: bold;
 }
 
 #mainmenu {
   text-align:left;
-  color: #2B346B;
-  /*font-family: Signika, sans-serif;*/
-  /*font-family: sans-serif;*/
- font-family:Calibri,"Segoe UI",
-             Candara,
-             "DejaVu Sans",
-             "Bitstream Vera Sans",
-             "Trebuchet MS",
-             Verdana,
-             sans-serif;
+  color: #0b044b;
 }
 #mainmenu .heading {
  padding-left: 5px;
@@ -127,12 +119,12 @@ h1 a, h2 a, h3 a, h4 a {
  font-size:0.9em;
  font-weight:normal;
  width:100%
- color: #2B346B;
+ color: #0b044b;
 }
 .menu a:link, .menu a:visited {
  font-weight:normal;
  text-decoration: none;
- color: #2B346B;
+ color: #0b044b;
 }
 .menu a:hover {
  color: #fff;
