Added an author and date to posts, removed the "read more" link which is useless for now

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <div class="post">
 <h2>{{ page.title }}</h2>
+<p class="postauthor"><i>Posted by {{ page.author }} on {{ page.date | date: "%A, %B %d, %Y" }}</i></p>
 {{ content }}
 </div>
 
