--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
 {% include navigation.md %}
     </div>
     <div id="rightcol">
+     <div id="twitter">
+      <a href="https://twitter.com/cobblerista" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @cobblerista</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
     </div>
     <div id="content">
 {{ content }}
