--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h1 a, h2 a, h3 a, h4 a {
   width: 240px;
   padding-left: 5px;
   padding-right: 5px;
+  text-align: center;
 }
 #content {
   margin-left: 200px;
