--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,6 @@ h1 a, h2 a, h3 a, h4 a {
   width: 240px;
   padding-left: 5px;
   padding-right: 5px;
-  text-align: center;
 }
 #content {
   margin-left: 200px;
@@ -153,6 +152,9 @@ h1 a, h2 a, h3 a, h4 a {
 
 #rightcol .toc {
   width: 240px;
+}
+#rightcol #twitter {
+  text-align: center;
 }
 
 .postauthor {
