--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,11 @@
 <div id="wrapper">
   <div id="header">
     <div id="logodiv"><img id="logo" src="/images/logo-cobbler.png" alt="logo" /></div>
+    <!-- no search yet
     <div id="searchdiv">
       <input id="searchbox" class="search" type="text" /><input id="searchbutton" class="search" type="button" value="search" onclick="javascript:run_search();" />
     </div>
+    -->
   </div>
   <div id="container">
     <div id="leftcol">
