--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1 a, h2 a, h3 a, h4 a {
   min-height:100%;
   height:auto !important;
   height:100%;
-  margin:0 auto -35px; /*this value is the footer height)*/
+  margin:0 auto -33px; /*this value is the footer height)*/
   width: 100%;
 }
 #header {
@@ -76,7 +76,7 @@ h1 a, h2 a, h3 a, h4 a {
 }
 #footer {
   background-color: #444237;
-  border-top: 5px solid #d4d2c7;
+  border-top: 3px solid #d4d2c7;
   color: white;
   font-weight: bold;
 }
@@ -135,6 +135,13 @@ h1 a, h2 a, h3 a, h4 a {
 
 #content h2 {
   border-bottom: 1px solid #2B346B;
+}
+#content h3 {
+  padding: 2px;
+  padding-left: 5px;
+  color: white;
+  background-color: #444237;
+  border-bottom: 1px solid #aBb4fB;
 }
 #content h1, #content h2, #content h3 {
   margin-bottom: 0.5em;
