--- a/_layouts/manpage.html
+++ b/_layouts/manpage.html
@@ -1,6 +1,7 @@
 {% include header.md %}
 
    <div class="span9">
+{% breadcrumb directory:"manuals" %}
     <h1>{{ page.title }}</h1>
 {{ content }}
    </div>
