Using code blocks for file paths Modified distro primative page to use a table for parameters and descriptions

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,10 @@ i.icon-med {
   text-align: center;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .box_rotate {
      -moz-transform: rotate(-90deg);  /* FF3.5+ */
        -o-transform: rotate(-90deg);  /* Opera 10.5 */
