Removed two custom plugins und renamed the layout files to *.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,6 +42,6 @@ var WRInitTime=(new Date()).getTime();
 </script>
 <!-- ClickTale end of Top part -->
 
-{% include navigation.md %}
+{% include navigation.html %}
 
 <!-- begin content -->
