--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,6 @@
        <ul class="dropdown-menu">
          <li><a href="/downloads/2.8.x.html" title="Cobbler 2.8.x">2.8.x</a></li>
          <li><a href="/downloads/2.6.x.html" title="Cobbler 2.6.x">2.6.x</a></li>
-         <li><a href="/downloads/2.4.x.html" title="Cobbler 2.4.x">2.4.x</a></li>
        </ul>
      </li>
      <li><a href="/posts/" title="Blog Posts"><i class="icon-bookmark icon-med"></i> Blog Posts</a></li>
@@ -20,7 +19,6 @@
          <li><a href="/manuals/quickstart/" title="Quickstart Guide">Quickstart Guide</a></li>
          <li><a href="/manuals/2.8.0/" title="Version 2.8.x">User Manual 2.8.x</a></li>
          <li><a href="/manuals/2.6.0/" title="Version 2.6.x">User Manual 2.6.x</a></li>
-         <li><a href="/manuals/2.4.0/" title="Version 2.4.x">User Manual 2.4.x</a></li>
          <li><a href="/manuals/developer/" title="Developer Guide">Developer Guide</a></li>
        </ul>
      </li>
@@ -73,3 +71,5 @@
   </div>
  </div>
 </div>
+
+{% include breadcrumb.html %}
