--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
-{% include header.md %}
+{% include header.html %}
 
 <div id="wrap" class="container">
 {{ content }}
 </div> <!-- end wrap -->
 
-{% include footer.md %}
+{% include footer.html %}
