--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,12 +19,25 @@ layout: default
      <h2 class="header">{{ page.title }}</h2>
      <div class="author"><i>Posted by {{ page.author }} on {{ page.date | date: "%A, %B %d, %Y" }}</i></div>
      <div class="content">{{ content }}</div>
-{% include disqus.md %}
+{% include disqus.html %}
     </div>
    </div>
   </div>
   <div class="span3">
-  {% related_posts_by_date %}
+      <div class='posts related_by_date'>
+          {% assign postsByYearMonth = site.posts | group_by_exp:"post", "post.date | date: '%Y %b'"  %}
+          {% assign curDate = page.date | date: '%Y %b' %}
+          {% for yearMonth in postsByYearMonth %}
+          {% if yearMonth.name == curDate %}
+          <h4>{{ yearMonth.name }}</h4>
+          <ul>
+              {% for post in yearMonth.items %}
+              <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+              {% endfor %}
+          </ul>
+          {% endif %}
+          {% endfor %}
+      </div>
   </div>
  </div>
 </div>
