--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body:before {
 .navbar.transparent.navbar-inverse .navbar-inner {
   background: rgba(0,0,0,0.85);
   border-bottom: 1px solid rgb(88, 88, 88);
-  padding: 5px 0px 0px 0px;
+  padding: 5px 0 0 0;
 }
 .navbar.transparent.navbar-inverse .navbar-inner .container {
   margin-top: 10px;
