Fixed the data driven navigation also for manual deeper man-pages

--- a/_layouts/manpage.html
+++ b/_layouts/manpage.html
@@ -7,7 +7,8 @@
 {% include disqus.html %}
   </div>
   <div class="span4">
-{% listdir %}
+      {% assign navroot = site.data.sitetree[page.navversion] %}
+      {% include nav_manpage.html nav=navroot %}
   </div>
  </div>
 </div>
