--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,13 +13,7 @@
        </ul>
      </li>
      <li><a href="/blog/" title="Blog Posts"><i class="icon-bookmark icon-med"></i> Blog Posts</a></li>
-     <li class="dropdown">
-       <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-question-sign icon-med"></i> Manuals <b class="caret"></b></a>
-       <ul class="dropdown-menu">
-         <li><a href="/manuals/quickstart/" title="Quickstart Guide">Quickstart Guide</a></li>
-         <li><a href="/manuals/2.6.0/" title="Version 2.6.x">User Manual 2.6.x</a></li>
-         <li><a href="/manuals/developer/" title="Developer Guide">Developer Guide</a></li>
-       </ul>
+     <li><a href="/manuals/quickstart/" title="Quickstart Guide">Quickstart</a>
      </li>
      <li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-group icon-med"></i> Community <b class="caret"></b></a>
