--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,7 +13,7 @@
        </ul>
      </li>
      <li><a href="/blog/" title="Blog Posts"><i class="icon-bookmark icon-med"></i> Blog Posts</a></li>
-     <li><a href="/manuals/quickstart/" title="Quickstart Guide">Quickstart</a>
+     <li><a href="/quickstart/" title="Quickstart Guide">Quickstart</a>
      </li>
      <li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-group icon-med"></i> Community <b class="caret"></b></a>
