--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         <div class="span2 sitemap">
          <ul class="nav nav-list">
           <li class="nav-header">Manuals</li>
-          <li><a href="/manuals/quickstart/">Quickstart</a></li>
+          <li><a href="/quickstart/">Quickstart</a></li>
           <li><a href="/manuals/2.6.0/">2.6.x</a></li>
           <li><a href="/manuals/developer/">Developer</a></li>
          </ul>
