--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,8 +17,8 @@
          <ul class="nav nav-list">
           <li class="nav-header">Manuals</li>
           <li><a href="/quickstart/">Quickstart</a></li>
-          <li><a href="/manuals/2.6.0/">2.6.x</a></li>
-          <li><a href="/manuals/developer/">Developer</a></li>
+          <li><a href="https://cobbler.readthedocs.io/en/latest/index.html">Documentation</a></li>
+          <li><a href="https://cobbler.readthedocs.io/en/latest/developer-guide.html">Developer</a></li>
          </ul>
         </div>
         <div class="span3 sitemap">
