Publish new 3.2.0 post und update signatures

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,8 +9,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
                                 class="icon-question-sign icon-med"></i> Downloads <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/downloads/3.0.x.html" title="Cobbler 3.0.x">3.0.x</a></li>
-                            <li><a href="/downloads/2.8.x.html" title="Cobbler 2.8.x">2.8.x</a></li>
+                            <li><a href="/downloads/3.x.x.html" title="Cobbler 3.x.x">3.x.x</a></li>
+                            <li><a href="/downloads/2.x.x.html" title="Cobbler 2.x.x">2.x.x</a></li>
                         </ul>
                     </li>
                     <li><a href="/blog/" title="Blog Posts"><i class="icon-bookmark icon-med"></i> Blog Posts</a></li>
