--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         <div class="span3 sitemap">
          <ul class="nav nav-list">
           <li class="nav-header">Manuals</li>
-          <li><a href="/quickstart/">Quickstart</a></li>
+          <li><a href="https://cobbler.readthedocs.io/en/latest/quickstart-guide.html">Quickstart</a></li>
           <li><a href="https://cobbler.readthedocs.io/en/latest/index.html">Documentation</a></li>
           <li><a href="https://cobbler.readthedocs.io/en/latest/developer-guide.html">Developer</a></li>
          </ul>
