--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,81 +1,68 @@
 <!-- end content -->
 
 <footer>
-  <div class="container">
-    <div class="row-fluid sections">
-      <div class="span6 footmenu">
-       <div class="row-fluid">
-        <div class="span3 sitemap">
-         <ul class="nav nav-list">
-          <li class="nav-header">Pages</li>
-          <li><a href="/">Home</a></li>
-          <li><a href="/blog/">Blog Posts</a></li>
-          <li><a href="/about.html">About Cobbler</a></li>
-         </ul>
+    <div class="container">
+        <div class="row">
+            <div class="col-1">
+                <h5>Pages</h5>
+                <ul class="list-unstyled">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/blog/">Blog Posts</a></li>
+                    <li><a href="/about.html">About Cobbler</a></li>
+                </ul>
+            </div>
+            <div class="col-1">
+                <h5>Manuals</h5>
+                <ul class="list-unstyled">
+                    <li><a href="https://cobbler.readthedocs.io/en/latest/quickstart-guide.html">Quickstart</a></li>
+                    <li><a href="https://cobbler.readthedocs.io/en/latest/index.html">Documentation</a></li>
+                    <li><a href="https://cobbler.readthedocs.io/en/latest/developer-guide.html">Developer</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-1">
+                <h5>Community</h5>
+                <ul class="list-unstyled">
+                    <li><a href="/community.html">How to Get Help</a></li>
+                    <li><a href="/supporters.html">Supporters</a></li>
+                    <li><a href="/users.html">Who's Using Cobbler</a></li>
+                </ul>
+            </div>
+            <div class="col-1">
+                <h5>Github</h5>
+                <ul class="list-unstyled">
+                    <li><a href="https://github.com/cobbler/cobbler">Code Repository</a></li>
+                    <li><a href="https://github.com/cobbler/cobbler/issues">Issue Tracker</a></li>
+                    <li><a href="https://github.com/cobbler/cobbler/wiki">Wiki</a></li>
+                </ul>
+            </div>
+            <div class="col-4">
+                <p class="column_header">Recent Posts:</p>
+                {% for post in site.posts limit:4 %}
+                <div class="post">
+                    <p class="title"><a href="{{ post.url}}">{{ post.title}}</a></p>
+                    <p class="author">Posted by {{ post.author }} on {{ post.date | date: "%A, %B %d, %Y" }}</p>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="col-4 credits">
+                <div class="social">
+                    <a href="https://twitter.com/cobblerproject?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true">Follow @cobblerproject</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="attributions">
+                    <p class="column_header">Attributions:</p>
+                    <div class="attribution">"Lens Flare", by <a href="http://creativity103.com/"><img
+                            src="/images/creativity103.gif"/></a></div>
+                    <div class="attribution">"Gears", by <a href="https://unsplash.com/@bill_oxford" rel="nofollow">Bill
+                        Oxford</a></div>
+                </div>
+                <div class="copyright">
+                    <p>All other content, &copy; <span id="copyyear"></span><br/>by James Cammarata</p>
+                    <script>document.querySelector("#copyyear").innerText = (new Date).getFullYear();</script>
+                </div>
+            </div>
         </div>
-        <div class="span3 sitemap">
-         <ul class="nav nav-list">
-          <li class="nav-header">Manuals</li>
-          <li><a href="https://cobbler.readthedocs.io/en/latest/quickstart-guide.html">Quickstart</a></li>
-          <li><a href="https://cobbler.readthedocs.io/en/latest/index.html">Documentation</a></li>
-          <li><a href="https://cobbler.readthedocs.io/en/latest/developer-guide.html">Developer</a></li>
-         </ul>
-        </div>
-        <div class="span3 sitemap">
-         <ul class="nav nav-list">
-          <li class="nav-header">Community</li>
-          <li><a href="/community.html">How to Get Help</a></li>
-          <li><a href="/supporters.html">Supporters</a></li>
-          <li><a href="/users.html">Who's Using Cobbler</a></li>
-         </ul>
-        </div>
-        <div class="span3 sitemap">
-         <ul class="nav nav-list">
-          <li class="nav-header">Github</li>
-          <li><a href="https://github.com/cobbler/cobbler">Code Repository</a></li>
-          <li><a href="https://github.com/cobbler/cobbler/issues">Issue Tracker</a></li>
-          <li><a href="https://github.com/cobbler/cobbler/wiki">Wiki</a></li>
-         </ul>
-        </div>
-       </div>
-    <div class="row-fluid">
     </div>
-    <div class="row-fluid">
-     <p class="ending">Best viewed in anything but Internet Explorer&#0153; Seriously, please consider switching.</p>
-     <p class="browsers">
-      <a href="https://www.mozilla.org/en-US/firefox/new/"><i class="icon-firefox icon-2x"></i></a>
-      <a href="https://www.google.com/intl/en/chrome/browser/"><i class="icon-chrome icon-2x"></i></a>
-      <a href="http://www.opera.com/"><i class="icon-opera icon-2x"></i></a>
-      <a href="http://www.apple.com/safari/"><i class="icon-safari icon-2x"></i></a>
-     </p>
-    </div>
-      </div>
-      <div class="span3 posts">
-        <p class="column_header">Recent Posts:</p>
-{% for post in site.posts limit:4 %}
-        <div class="post">
-          <p class="title"><a href="{{ post.url}}">{{ post.title}}</a></p>
-          <p class="author">Posted by {{ post.author }} on {{ post.date | date: "%A, %B %d, %Y" }}</p>
-        </div>
-{% endfor %}
-      </div>
-      <div class="span3 credits">
-        <div class="social">
-          <a href="https://twitter.com/cobblerproject" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true" data-width="100%">Follow @cobblerproject</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        </div>
-        <div class="attributions">
-          <p class="column_header">Attributions:</p>
-          <div class="attribution">"Lens Flare", by <a href="http://creativity103.com/"><img src="/images/creativity103.gif" /></a></div>
-          <div class="attribution">"Gears", by <a href="https://unsplash.com/@bill_oxford" rel="nofollow">Bill Oxford</a></div>
-        </div>
-        <div class="copyright">
-          <p>All other content, &copy; <span id="copyyear"></span><br/>by James Cammarata</p>
-          <script>$("#copyyear").text((new Date).getFullYear());</script>
-        </div>
-      </div>
-    </div>
-  </div>
 </footer>
 
 </body>
