--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </head>
-<body class="pull_up">
+<body class="d-flex flex-column min-vh-100">
 
 {% include navigation.html %}
 
