--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,40 +3,63 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none" href="/">
                 <object class="logo" data="/images/logo-cobbler-new.svg" height="50px">
-                    <img src="/images/logo-cobbler-new.png"/>
+                    <img src="/images/logo-cobbler-new.png" alt="Cobbler Logo"/>
                 </object>
                 <span class="fs-4">Cobbler</span>
             </a>
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/about.html" title="About"><i class="icon-cloud icon-med"></i> About </a></li>
+                <li>
+                    <a class="btn btn-secondary" href="/about.html" title="About">
+                        <i class="icon-cloud icon-med"></i> About
+                    </a>
+                </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                            class="icon-question-sign icon-med"></i> Downloads <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/downloads/3.x.x.html" title="Cobbler 3.x.x">3.x.x</a></li>
-                        <li><a href="/downloads/2.x.x.html" title="Cobbler 2.x.x">2.x.x</a></li>
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="icon-question-sign icon-med"></i>Downloads
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                        <li><a class="dropdown-item" type="button" href="/downloads/3.x.x.html">3.x.x</a></li>
+                        <li><a class="dropdown-item" type="button" href="/downloads/2.x.x.html">2.x.x</a></li>
                     </ul>
                 </li>
-                <li><a href="/blog/" title="Blog Posts"><i class="icon-bookmark icon-med"></i> Blog Posts</a></li>
+                <li>
+                    <a class="btn btn-secondary" href="/blog/" title="Blog Posts">
+                        <i class="icon-bookmark icon-med"></i> Blog Posts
+                    </a>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-group icon-med"></i>
-                        Community <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/community.html" title="How to Get Help">How to Get Help</a></li>
-                        <li><a href="/supporters.html" title="Supporters of Cobbler">Supporters</a></li>
-                        <li><a href="/users.html" title="Cobbler Users">Who's Using Cobbler</a></li>
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu3"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="icon-group icon-med"></i>Community
+                    </button>
+                    <ul class="dropdown-menu"  aria-labelledby="dropdownMenu3">
+                        <li>
+                            <a class="dropdown-item" href="/community.html" title="How to Get Help">How to Get Help</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/supporters.html" title="Supporters of Cobbler">Supporters</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/users.html" title="Cobbler Users">Who's Using Cobbler</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-github icon-med"></i>
-                        Github <b class="caret"></b></a>
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu4"
+                            data-bs-toggle="dropdown" aria-expanded="false"><i class="icon-github icon-med"></i>
+                        Github <b class="caret"></b></button>
                     <ul class="dropdown-menu">
-                        <li><a href="https://github.com/cobbler/cobbler" title="Main Repository" target="_blank">Main
-                            Repo</a></li>
-                        <li><a href="https://github.com/cobbler/cobbler/issues" title="Issues" target="_blank">Issue
-                            Tracker</a></li>
-                        <li><a href="https://github.com/cobbler/cobbler/wiki" title="Github Wiki"
+                        <li>
+                            <a class="dropdown-item" href="https://github.com/cobbler/cobbler" title="Main Repository"
+                               target="_blank">Main Repo</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="https://github.com/cobbler/cobbler/issues" title="Issues"
+                               target="_blank">Issue Tracker</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="https://github.com/cobbler/cobbler/wiki" title="Github Wiki"
                                target="_blank">Wiki</a>
                         </li>
                     </ul>
