Multiple small spacing and content improvements

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- end content -->
 
 <footer class="mt-auto bg-dark text-white">
-    <div class="container">
+    <div class="container py-3">
         <div class="row">
             <div class="col-2">
                 <h5>Pages</h5>
@@ -36,20 +36,28 @@
                     <li><a href="https://github.com/cobbler/cobbler/wiki">Wiki</a></li>
                 </ul>
             </div>
-            <div class="col-4">
-                <a href="https://twitter.com/cobblerproject?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true">Follow @cobblerproject</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                Attributions:
+            <div class="col-2">
+                <h5>Attributions:</h5>
                 <ul class="list-unstyled">
-                    <li>"Lens Flare", by <a href="http://creativity103.com/"><img src="/images/creativity103.gif"/></a></li>
+                    <li>
+                        "Lens Flare", by <a href="https://creativity103.com/"><img src="/images/creativity103.gif"/></a>
+                    </li>
                     <li>"Gears", by <a href="https://unsplash.com/@bill_oxford" rel="nofollow">Bill Oxford</a></li>
                     <li><p>All other content, &copy; <span id="copyyear"></span><br/>by the Cobbler Project</p>
                         <script>document.querySelector("#copyyear").innerText = (new Date).getFullYear();</script>
                     </li>
                 </ul>
             </div>
+            <div class="col-2">
+                <h5>Social</h5>
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="https://twitter.com/cobblerproject?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+                           data-show-count="false">Follow @cobblerproject</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
-
-</body>
-</html>
