--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,18 +9,18 @@
 
    <!-- CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-   <link rel="stylesheet" type="text/css" href="/lib/font/font-awesome.css" />
-   <link rel="stylesheet" type="text/css" href="/lib/font/font-awesome-ext.css" />
-   <link rel="stylesheet" type="text/css" href="/css/style.css" />
+   <link href="/lib/fontawesome/css/all.css" rel="stylesheet">
 
    <!-- Fonts -->
-   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Habibi|Roboto+Condensed' />
+   <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Habibi|Roboto+Condensed' />
 
    <!-- Icon -->
    <link rel="icon" type="image/svg+xml" href="/images/logo-cobbler-new.svg" />
 
    <!-- JQuery/Bootstrap/custom scripts -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+   <script defer src="/lib/fontawesome/js/all.js"></script>
+   <script defer src="/lib/fontawesome/attribution.js"></script>
 
 </head>
 <body class="d-flex flex-column min-vh-100">
