--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,23 +9,23 @@
             <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdownNav">
                 <li class="nav-item px-2">
                     <a class="text-white text-decoration-none" href="/" title="Home">
-                        <i class="icon-home icon-med"></i> Home
+                        <i class="fas fa-home"></i> Home
                     </a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="text-white text-decoration-none" href="/about.html" title="About">
-                        <i class="icon-cloud icon-med"></i> About
+                        <i class="fas fa-cloud"></i> About
                     </a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="text-white text-decoration-none" href="/blog/" title="Blog Posts">
-                        <i class="icon-bookmark icon-med"></i> Blog Posts
+                        <i class="fas fa-blog"></i> Blog Posts
                     </a>
                 </li>
                 <li class="nav-item px-2 dropdown">
                     <a class="dropdown-toggle text-white text-decoration-none" href="#" role="button"
                        id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="icon-question-sign icon-med"></i>Downloads
+                        <i class="fas fa-cloud-download-alt"></i> Downloads
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenu2">
                         <li><a class="dropdown-item" href="/downloads/3.x.x.html">3.x.x</a></li>
@@ -35,7 +35,7 @@
                 <li class="nav-item px-2 dropdown">
                     <a class="dropdown-toggle text-white text-decoration-none" href="#" role="button"
                        id="dropdownMenu3" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="icon-group icon-med"></i>Community
+                        <i class="fas fa-users"></i> Community
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenu3">
                         <li>
@@ -55,7 +55,7 @@
                 <li class="nav-item px-2 dropdown">
                     <a class="dropdown-toggle text-white text-decoration-none" href="#" role="button"
                        id="dropdownMenu4" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="icon-github icon-med"></i>Github</a>
+                        <i class="fab fa-github"></i></i> Github</a>
                     <ul class="dropdown-menu dropdown-menu-dark">
                         <li>
                             <a class="dropdown-item" href="https://github.com/cobbler/cobbler"
